--- a/waybar/config
+++ b/waybar/config
@@ -35,21 +35,24 @@
   //  },
 
     "hyprland/workspaces": {
+      "persistent-workspaces": {
+        "*": 5,
+      },
     //  "disable-scroll": true,
     /* "all-outputs": true, */
     //"active-only": true,
     "format": "{icon}",
     "format-icons": {
-      "1": "一",
-      "2": "二",
-      "3": "三",
-      "4": "四",
-      "5": "五",
-      "6": "六",
-      "7": "七",
-      "8": "八",
-      "9": "九",
-      "10": "十",
+      "1": "I",
+      "2": "II",
+      "3": "III",
+      "4": "VI",
+      "5": "V",
+      "6": "VI",
+      "7": "VII",
+      "8": "VIII",
+      "9": "IX",
+      "10": "X",
       "urgent": "",
       "focused": "",
       "default": ""
