--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -22,9 +22,9 @@ monitor=HDMI-A-1, 1366x768, 0x-768, 1
 monitor=eDP-1, 1920x1080, 0x0, 1
 # monitor=HDMI-A-1, 1366x768, 0x0, 1
 # monitor=eDP-1, 1920x1080, 768x0, 1
-
-
-# Status bar :) 
+env = GTK_THEME,Nordic
+exec-once=/usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+# 'Status bar :)
 # exec-once=eww open bar
 exec-once=waybar
 #Notification 
@@ -34,7 +34,7 @@ exec-once=swaybg -o \* -i ~/.config/hypr/wallpapers/butet.jpg -m fill
 # For screen sharing
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 # For keyboard 
-exec-once=fcitx5 -D
+# exec-once=fcitx5 -D
 exec-once=cliphist daemon
 exec-once= wl-paste --watch cliphist store
 # For lockscreen
@@ -48,12 +48,14 @@ exec-once=blueman-applet # Make sure you have installed blueman
 # Screen Sharing 
 exec-once=systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once=~/.config/hypr/scripts/screensharing.sh
-
+# general:no_cursor_warps = true
 input {
   # Remap Capslock -> Esc for Vim users  
   kb_options=caps:escape 
   repeat_rate=50
   repeat_delay=240
+  mouse_refocus=false
+  follow_mouse=2
 
   touchpad {
     disable_while_typing=1
@@ -108,13 +110,14 @@ blurls=lockscreen
 
 animations {
     enabled=1
-    # bezier=overshot,0.05,0.9,0.1,1.1
-    bezier=overshot,0.13,0.99,0.29,1.1
-    animation=windows,1,4,overshot,popin
-    animation=fade,1,10,default
-    animation=workspaces,1,6,overshot,slide
+    bezier=overshot,0.05,0.9,0.1,1.1
+    bezier=overshot,0.13,0.99,0.29,1.
+    animation=windows,1,7,overshot,slide
     animation=border,1,10,default
-}
+    animation=fade,1,10,default
+    animation=workspaces,1,7,overshot,slidevert
+
+   }
 
 dwindle {
     pseudotile=1 # enable pseudotiling on dwindle
@@ -137,7 +140,7 @@ misc {
 
 ########################################################################################
 
-\ \        / (_)         | |                   |  __ \     | |          
+ \ \        / (_)         | |                   |  __ \     | |          
   \ \  /\  / / _ _ __   __| | _____      _____  | |__) |   _| | ___  ___ 
    \ \/  \/ / | | '_ \ / _` |/ _ \ \ /\ / / __| |  _  / | | | |/ _ \/ __|
     \  /\  /  | | | | | (_| | (_) \ V  V /\__ \ | | \ \ |_| | |  __/\__ \
@@ -162,11 +165,24 @@ windowrulev2 = opacity 0.0 override 0.0 override,class:^(xwaylandvideobridge)$
 windowrulev2 = noanim,class:^(xwaylandvideobridge)$
 windowrulev2 = nofocus,class:^(xwaylandvideobridge)$
 windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
+
+windowrule = float, file_progress
+windowrule = float, confirm
+windowrule = float, dialog
+windowrule = float, download
+windowrule = float, notification
+windowrule = float, error
+windowrule = float, splash
+windowrule = float, confirmreset
+windowrule = float, title:Open File
+windowrule = float, title:Properties
+windowrule = float, title:branchdialog
+windowrule = float,nemo
 # Increase the opacity 
 windowrule=opacity 0.92,Thunar
 windowrule=opacity 0.96,discord
 # windowrule=opacity 0.9,VSCodium
-windowrule=opacity 0.88,obsidian
+windowrule=opacity 0.95,obsidian
 
 ^.*nvim.*$
 # windowrule=tile,librewolf
@@ -199,8 +215,9 @@ bind=SUPERSHIFT,P,exit,
 bind=SUPER,D,exec, rofi -show drun
 bind=SUPER,P,pseudo,
 bind=SUPER,ESCAPE,exec,sudo systemctl suspend
+#bind=SUPER, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
 bind=SUPER, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
-
+bind=ALT, TAB, exec,~/.config/waybar/scripts/power-menu/powermenu.sh
 bind=,XF86AudioMute,exec,~/.config/hypr/scripts/volume mute
 bind=,XF86AudioLowerVolume,exec,~/.config/hypr/scripts/volume down
 bind=,XF86AudioRaiseVolume,exec,~/.config/hypr/scripts/volume up
@@ -208,7 +225,7 @@ bind=,XF86AudioMicMute,exec,pactl set-source-mute @DEFAULT_SOURCE@ toggle
 
 bindle=,XF86MonBrightnessUp,exec,~/.config/hypr/scripts/brightness up  # increase screen brightness
 bindle=,XF86MonBrightnessDown,exec,~/.config/hypr/scripts/brightness down # decrease screen brightnes
-# bind=SUPERSHIFT,C,exec,bash ~/.config/hypr/scripts/hyprPicker.sh
+bind=SUPERSHIFT,C,exec,bash ~/.config/hypr/scripts/hyprPicker.sh
 bind=SUPERSHIFT,E,exec,wlogout
 bind = SUPER, G, togglefloating,
 bind=SUPERSHIFT,P,exec,pomotroid --in-process-gpu
