--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -85,6 +85,10 @@ general {
     apply_sens_to_raw=0 # whether to apply the sensitivity to raw input (e.g. used by games where you aim using your mouse)
 }
 
+binds {
+    allow_workspace_cycles = true
+}
+
 decoration {
     rounding=18
     blur {
@@ -261,6 +265,7 @@ bind=SUPERSHIFT,l,movewindow,r
 bind=SUPERSHIFT,k,movewindow,u
 bind=SUPERSHIFT,j,movewindow,d
 
+bind=SUPER,a,togglespecialworkspace
 bind=SUPER,1,workspace,1
 bind=SUPER,2,workspace,2
 bind=SUPER,3,workspace,3
@@ -271,6 +276,10 @@ bind=SUPER,7,workspace,7
 bind=SUPER,8,workspace,8
 bind=SUPER,9,workspace,9
 bind=SUPER,0,workspace,10
+bind=SUPER,tab,workspace,previous
+
+bind=SUPER,u,workspace,e+1
+bind=SUPER,y,workspace,e-1
 
 bind=SUPERSHIFT,1,movetoworkspacesilent,1
 bind=SUPERSHIFT,2,movetoworkspacesilent,2
