update workspace script

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -30,7 +30,9 @@ exec-once=waybar
 #Notification 
 exec-once=mako
 # Wallpaper
-exec-once=swaybg -o \* -i ~/.config/hypr/wallpapers/butet.jpg -m fill
+# exec-once: swww init
+# exec: swww img ~/.config/hypr/wallpapers/jajep.jpg
+exec-once=swaybg -o \* -i ~/.config/hypr/wallpapers/enaken.jpg -m fill
 # For screen sharing
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 # For keyboard 
@@ -232,15 +234,22 @@ bindle=,XF86MonBrightnessDown,exec,~/.config/hypr/scripts/brightness down # decr
 bind=SUPERSHIFT,C,exec,bash ~/.config/hypr/scripts/hyprPicker.sh
 bind=SUPERSHIFT,E,exec,wlogout
 bind = SUPER, G, togglefloating,
-bind=SUPERSHIFT,P,exec,pomotroid --in-process-gpu
+# bind=SUPERSHIFT,P,exec,pomotroid --in-process-gpu
+# workspace
+bind=SUPERALT,y,exec, python ~/.config/hypr/scripts/navigate_workspace.py --left
+bind=SUPERALT,u,exec, python ~/.config/hypr/scripts/navigate_workspace.py --right
+bind=SUPERSHIFT,y,exec, python ~/.config/hypr/scripts/navigate_workspace.py --left --move
+bind=SUPERSHIFT,u,exec, python ~/.config/hypr/scripts/navigate_workspace.py --right --move
 
-# Screen shot 
+bind=SUPER,u,workspace,e+1
+bind=SUPER,y,workspace,e-1
+# Screenshots
 bind=SUPERSHIFT,S,exec,grim -g "$(slurp)" - | swappy -f -
 # Screen recorder
-bind=SUPER,R,exec,wf-recorder -g "$(slurp)"
-   //     "format-disconnected": "Disconnected  ",
+# bind=SUPER,R,exec,wf-recorder -g "$(slurp)"
+   # //     "format-disconnected": "Disconnected  ",
 # Emoji selector 
-bind=SUPER,E,exec,rofi -modi emoji -show emoji
+# bind=SUPER,E,exec,rofi -modi emoji -show emoji
 
 
 bind=SUPERSHIFT,RETURN,layoutmsg,swapwithmaster
@@ -265,7 +274,7 @@ bind=SUPERSHIFT,l,movewindow,r
 bind=SUPERSHIFT,k,movewindow,u
 bind=SUPERSHIFT,j,movewindow,d
 
-bind=SUPER,a,togglespecialworkspace
+# bind=SUPERSHIFT,o,togglespecialworkspace
 bind=SUPER,1,workspace,1
 bind=SUPER,2,workspace,2
 bind=SUPER,3,workspace,3
@@ -278,8 +287,6 @@ bind=SUPER,9,workspace,9
 bind=SUPER,0,workspace,10
 bind=SUPER,tab,workspace,previous
 
-bind=SUPER,u,workspace,e+1
-bind=SUPER,y,workspace,e-1
 
 bind=SUPERSHIFT,1,movetoworkspacesilent,1
 bind=SUPERSHIFT,2,movetoworkspacesilent,2
