changing waybar and adding script for hypr

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -13,6 +13,24 @@
        |___/|_|                                                      |___/    
 #########################################################################################
 
+
+
+#values
+$volume = $scriptsDir/Volume.sh
+$scriptsDir = $HOME/.config/hypr/scripts
+$hyprDir = $HOME/.config/hypr
+$hint = $scriptsDir/keyhint
+$lock = $scriptsDir/lockscreen
+$screenshot = $scriptsDir/Screenshots
+$backlight = $scriptsDir/Brightness.sh
+#$wallpaper = $scriptsDir/Wallpaper.sh
+$wallpaper = $scriptsDir/changeWallpaper.sh
+#using swaybg random wallpaper
+bind = SUPER, W, exec, $wallpaper
+exec-once = $scriptsDir/changeWallpaper.sh 
+exec-once = $scriptsDir/Volume.sh
+exec-once = $scriptsDir/Brightness.sh
+#using swaybg random wallpaper
 # You have to change this based on your monitor 
 # monitor=
 # monitor=,preferred,auto,1
@@ -22,6 +40,9 @@ monitor=HDMI-A-1, 1366x768, 0x-768, 1
 monitor=eDP-1, 1920x1080, 0x0, 1
 # monitor=HDMI-A-1, 1366x768, 0x0, 1
 # monitor=eDP-1, 1920x1080, 768x0, 1
+# scripts 
+#
+bindl=,switch:Lid Switch, exec, ~/.config/hypr/scripts/switch-lid.sh
 env = GTK_THEME,Nordic
 exec-once=/usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 # 'Status bar :)
@@ -216,7 +237,7 @@ bind=SUPER,F,fullscreen,1
 bind=SUPERSHIFT,F,fullscreen,0
 bind=SUPER,T,exec,kitty
 # bind=SUPER,C,killactive,
-bind=SUPERSHIFT,P,exit,
+bind=SUPERSHIFT, TAB,exit,
 # bind=SUPER,E,exec,pcmanfm
 bind=SUPER,D,exec, rofi -show drun
 bind=SUPER,P,pseudo,
@@ -224,25 +245,36 @@ bind=SUPER,ESCAPE,exec,sudo systemctl suspend
 #bind=SUPER, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
 bind=SUPER, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
 bind=ALT, TAB, exec,~/.config/waybar/scripts/power-menu/powermenu.sh
-bind=,XF86AudioMute,exec,~/.config/hypr/scripts/volume mute
-bind=,XF86AudioLowerVolume,exec,~/.config/hypr/scripts/volume down
-bind=,XF86AudioRaiseVolume,exec,~/.config/hypr/scripts/volume up
-bind=,XF86AudioMicMute,exec,pactl set-source-mute @DEFAULT_SOURCE@ toggle
-
-bindle=,XF86MonBrightnessUp,exec,~/.config/hypr/scripts/brightness up  # increase screen brightness
-bindle=,XF86MonBrightnessDown,exec,~/.config/hypr/scripts/brightness down # decrease screen brightnes
+# bindle=,XF86MonBrightnessUp,exec,~/.config/hypr/scripts/brightness up  # increase screen brightness
+# bindle=,XF86MonBrightnessDown,exec,~/.config/hypr/scripts/brightness down # decrease screen brightnes
 bind=SUPERSHIFT,C,exec,bash ~/.config/hypr/scripts/hyprPicker.sh
 bind=SUPERSHIFT,E,exec,wlogout
 bind = SUPER, G, togglefloating,
 # bind=SUPERSHIFT,P,exec,pomotroid --in-process-gpu
+bind = , xf86audioraisevolume, exec, $volume --inc #volume up
+bind = , xf86audiolowervolume, exec, $volume --dec #volume down
+bind = , xf86AudioMicMute, exec, $volume --toggle-mic #mute mic
+bind = , xf86audiomute, exec, $volume --toggle #FN+F1
+bind = , xf86MonBrightnessDown, exec, $backlight --dec #FN+F7
+bind = , xf86MonBrightnessUp, exec, $backlight --inc #FN+F8
+
 # workspace
 bind=SUPERALT,y,exec, python ~/.config/hypr/scripts/navigate_workspace.py --left
 bind=SUPERALT,u,exec, python ~/.config/hypr/scripts/navigate_workspace.py --right
 bind=SUPERSHIFT,y,exec, python ~/.config/hypr/scripts/navigate_workspace.py --left --move
 bind=SUPERSHIFT,u,exec, python ~/.config/hypr/scripts/navigate_workspace.py --right --move
 
+# Screenshot keybindings NOTE:
+#bind = , Print, exec, $screenshot --now
+bind = SUPERSHIFT, P, exec, $screenshot --now
+bind = SUPERALT, P, exec, $screenshot --in5
+#bind = CTRL, Print, exec, $screenshot --win
+#bind = SHIFT, Print, exec, $screenshot --area
+bind = SUPERSHIFT ALT, P, exec, $screenshot --area
+
 bind=SUPER,u,workspace,e+1
 bind=SUPER,y,workspace,e-1
+
 # Screenshots
 bind=SUPERSHIFT,S,exec,grim -g "$(slurp)" - | swappy -f -
 # Screen recorder
