--- a/waybar/config
+++ b/waybar/config
@@ -12,7 +12,7 @@
     "spacing": 5, // Gaps between modules (4px)
     "modules-left": ["custom/launcher", "hyprland/workspaces",  "cpu", "memory","temperature", "custom/weather",],
     "modules-center": ["clock",],
-    "modules-right": ["tray", "network","custom/spotify", "pulseaudio#microphone", "backlight", "pulseaudio", "battery", "custom/power-menu",],
+    "modules-right": ["network", "tray", "custom/spotify", "pulseaudio#microphone", "backlight", "pulseaudio", "battery", "custom/power-menu",],
    // "hyprland/workspaces": {
    //   "format": "{icon}",
    //   "on-click": "activate",
@@ -132,8 +132,8 @@
     "on-click-middle": "",
     "on-click-right": "",
     "on-update": "",
-    "on-scroll-up": "~/.config/hypr/scripts/brightness-new.sh --inc",
-    "on-scroll-down": "~/.config/hypr/scripts/brightness-new.sh --dec",
+    "on-scroll-up": "~/.config/hypr/scripts/Brightness.sh --inc",
+    "on-scroll-down": "~/.config/hypr/scripts/Brightness.sh --dec",
     "smooth-scrolling-threshold": 1,
   },
    /* "network": {
@@ -205,20 +205,20 @@
     "ignored-sinks": ["Easy Effects Sink"],
   },
     "scroll-step": 5.0,
-    "on-click": "~/.config/hypr/scripts/volume --toggle",
+    "on-click": "~/.config/hypr/scripts/Volume.sh --toggle",
     "on-click-right": "pavucontrol",
-    "on-scroll-up": "~/.config/hypr/scripts/volume --inc",
-    "on-scroll-down": "~/.config/hypr/scripts/volume --dec",
+    "on-scroll-up": "~/.config/hypr/scripts/Volume.sh --inc",
+    "on-scroll-down": "~/.config/hypr/scripts/Volume.sh --dec",
     "smooth-scrolling-threshold": 1,
   },
     "pulseaudio#microphone": {
     "format": "{format_source}",
     "format-source": "<span color='#5e81ac'></span> {volume} %",
     "format-source-muted": "<span color='#5e81ac'>  </span> muted",
-    "on-click": "~/.config/hypr/scripts/volume --toggle-mic",
+    "on-click": "~/.config/hypr/scripts/Volume.sh --toggle-mic",
     "on-click-right": "pavucontrol",
-    "on-scroll-up": "~/.config/hypr/scripts/volume --mic-inc",
-    "on-scroll-down": "~/.config/hypr/scripts/volume --mic-dec",
+    "on-scroll-up": "~/.config/hypr/scripts/Volume.sh --mic-inc",
+    "on-scroll-down": "~/.config/hypr/scripts/Volume.sh --mic-dec",
     "scroll-step": 5,
   },
 
